Modified for training performance comparison

--- a/training-exp.ipynb
+++ b/training-exp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "dcc91f76",
    "metadata": {},
    "outputs": [],
@@ -11,6 +11,7 @@
     "import pickle\n",
     "import matplotlib.pyplot as plt  \n",
     "from sklearn.svm import SVC\n",
+    "from time import time \n",
     "\n",
     "from pytket.extensions.qiskit import AerBackend, IBMQBackend, IBMQEmulatorBackend\n",
     "from noisyopt import minimizeSPSA\n",
@@ -68,7 +69,9 @@
    "id": "19f469fb",
    "metadata": {},
    "source": [
-    "## Training"
+    "## Training\n",
+    "\n",
+    "basically just train the embeddings for as long as possible but save the parameters in the callback funciton"
    ]
   },
   {
@@ -196,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "0bbfe3ad",
    "metadata": {},
    "outputs": [],
@@ -207,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "e0447c85",
    "metadata": {},
    "outputs": [],
@@ -218,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "ea6b3b54",
    "metadata": {},
    "outputs": [
@@ -234,14 +237,23 @@
     "import os\n",
     "\n",
     "nfiles = len(os.listdir('./training-params')) - 2\n",
-    "print(f'Number of files: {nfiles}')\n",
-    "\n",
-    "\n",
+    "print(f'Number of files: {nfiles}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ede7a4f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Testing acc for old way\n",
     "for i in range(nfiles):\n",
     "    epoch_vals = np.load(f'./training-params/params_epoch_{i}.npy')\n",
     "    \n",
-    "    test_cost_fn(epoch_vals)"
+    "    test_cost_fn(epoch_vals)\n",
+    "\n",
+    "np.save('explicit-test-accs', test_accs)"
    ]
   },
   {
@@ -254,7 +266,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
       "Building circuits...\n"
      ]
     },
@@ -270,18 +281,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Took 8.281 s \n",
+      "Took 7.67 s \n",
       "Building training Gram matrix...\n",
-      "Took 490.115 s \n",
-      "Building testing Gram matrix...\n"
+      "Took 333.447 s \n",
+      "Building testing Gram matrix...\n",
+      "Took 300.401 s \n",
+      "Finished 1\n",
+      "Building circuits...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Took 13.106 s \n",
+      "Building training Gram matrix...\n",
+      "Took 435.667 s \n",
+      "Building testing Gram matrix...\n",
+      "Took 995.221 s \n",
+      "Finished 2\n",
+      "Building circuits...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Took 9.352 s \n",
+      "Building training Gram matrix...\n"
      ]
     }
    ],
    "source": [
-    "svm_swap_accs = []\n",
+    "try:\n",
+    "    svm_swap_accs = np.load('svm_accs_epochs.npy').tolist()\n",
+    "except Exception:\n",
+    "    svm_swap_accs = []\n",
     "\n",
-    "for i in range(nfiles):\n",
-    "    print(i)\n",
+    "print(f'Starting at {len(svm_swap_accs)}\\n')\n",
+    "\n",
+    "for i in range(len(svm_swap_accs), nfiles):\n",
     "    epoch_vals = np.load(f'./training-params/params_epoch_{i}.npy')\n",
     "\n",
     "    gram_train, gram_test = hlp.build_gram_matrices(\n",
@@ -291,30 +346,18 @@
     "    )\n",
     "\n",
     "    svc = SVC(kernel=\"precomputed\", probability=True)\n",
-    "\n",
-    "    ts = time()\n",
     "    svc.fit(gram_train, train_labels[:, 0])\n",
-    "    hlp.timestamp(time(), ts, 'to fit SVC')\n",
-    "\n",
-    "    ts = time()\n",
     "    score = svc.score(gram_test, test_labels[:, 0])\n",
-    "    hlp.timestamp(time(), ts, 'to score SVC')\n",
     "    \n",
     "    svm_swap_accs.append(score)\n",
-    "    np.save('svm_accs_epochs', svm_swap_accs)"
+    "    np.save('svm_accs_epochs', svm_swap_accs)\n",
+    "\n",
+    "    print(f'\\nFinished {i}\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "655ae6d9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "234914df",
    "metadata": {},
    "outputs": [
